# Fastcamp_Agents

./: requirements.txt
10 - Agentes com CrewAI/Aula/customer_support/: README.md  pyproject.toml  (+1 more)
10 - Agentes com CrewAI/Prática/best_teacher/: README.md  pyproject.toml
10 - Agentes com CrewAI/Prática/best_teacher/output/: final_markdown.md
10 - Agentes com CrewAI/Prática/best_teacher/src/best_teacher/: crew.py  main.py  run.ipynb
10 - Agentes com CrewAI/Prática/best_teacher/src/best_teacher/config/: agents.yaml  tasks.yaml
10 - Agentes com CrewAI/Prática/best_teacher/src/best_teacher/output/: final_markdown.md
11 - Agentes com CrewAI e Streamlit/Prática/: Crew_UPA.py
12 - Agentes com Whatsapp/Aula/: requirements.txt  testes.ipynb
12 - Agentes com Whatsapp/Prática/consultas/: README.md  pyproject.toml  report.md  requirements.txt
12 - Agentes com Whatsapp/Prática/consultas/src/consultas/: abc.csv  crew.py  main.py
12 - Agentes com Whatsapp/Prática/consultas/src/consultas/config/: agents.yaml  tasks.yaml
13 - Orquestrando agentes com CrewAI/rag_medico/: README.md  pyproject.toml  report.md
13 - Orquestrando agentes com CrewAI/rag_medico/db/d8929dfa-69b2-49a5-8bb5-f4ded9714618/: index_metadata.pickle
13 - Orquestrando agentes com CrewAI/rag_medico/src/rag_medico/: crew.py  main.py  mtsamples.csv
13 - Orquestrando agentes com CrewAI/rag_medico/src/rag_medico/config/: agents.yaml
2-Criando_um_ReAct_Agent_do_Zero/Aula/: Ai_agent_aula.ipynb
2-Criando_um_ReAct_Agent_do_Zero/Prática/: Ai_agent_pratica.ipynb
3-Validação_de_dados_com_Pydantic/Aula/: pydantic_aula.ipynb
3-Validação_de_dados_com_Pydantic/Prática/: main.py  pydantic_pratica.ipynb
6-Embedding/: Embedding.json  lol.csv
6-Embedding/Aula/: Embeddings_aula.json
6-Embedding/Prática/: Embeddings_pratica.json
8-Agentes_com_CrewAI/Prática/: CrewAI.ipynb  relatorio.md
(+20 files in other folders)
