[project]
name = "rag_medico"
version = "0.1.0"
description = "rag_medico using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
rag_medico = "rag_medico.main:run"
run_crew = "rag_medico.main:run"
train = "rag_medico.main:train"
replay = "rag_medico.main:replay"
test = "rag_medico.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
