[project]
name = "best_teacher"
version = "0.1.0"
description = "best_teacher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
best_teacher = "best_teacher.main:run"
run_crew = "best_teacher.main:run"
train = "best_teacher.main:train"
replay = "best_teacher.main:replay"
test = "best_teacher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
