[project]
name = "consultas"
version = "0.1.0"
description = "consultas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
consultas = "consultas.main:run"
run_crew = "consultas.main:run"
train = "consultas.main:train"
replay = "consultas.main:replay"
test = "consultas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
